Add support for OV inference precision

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1145,9 +1145,12 @@ if (onnxruntime_USE_OPENVINO)
   elseif ($ENV{INTEL_OPENVINO_DIR} MATCHES "2022.3")
     set(OPENVINO_VERSION "2022.3")
     add_definitions(-DOPENVINO_2022_3=1)
+  elseif ($ENV{INTEL_OPENVINO_DIR} MATCHES "2023.0")
+    set(OPENVINO_VERSION "2023.0")
+    add_definitions(-DOPENVINO_2023_0=1)
   elseif ($ENV{INTEL_OPENVINO_DIR} MATCHES "openvino")
-    set(OPENVINO_VERSION "2022.3")
-    add_definitions(-DOPENVINO_2022_3=1)
+    set(OPENVINO_VERSION "2023.0")
+    add_definitions(-DOPENVINO_2023_0=1)
   else()
     message(FATAL_ERROR "Unsupported OpenVINO version: ${INTEL_OPENVINO_DIR}")
   endif()
